Fix Solution H documentation: -Djdk.attach.allowAttachSelf enables self-attach
Solution H (self-attach agent) now works with the standard JVM flag
-Djdk.attach.allowAttachSelf which allows a process to attach to itself.
This is the documented, portable way to enable self-attach across Java versions.

Updated README:
  - Corrected attach requirement and flag name
  - run-self-attach.sh already includes the flag
  - Updated comparison table and brainstorm table accordingly

Solution H now fully working ✓

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>